# miniapps

./: %F%  .gitattributes  .gitignore  2  AGENTS.md  README.md  deploy-dashboard.ps1  deploy-tavern.ps1  deploy_commands.sh  deploy_remote.bat  domain.config.js  event.tsx  fix.js  index.module.scss  index.tsx  local_dev.bat  package-lock.json  package.json  patch-server.js  recover_and_deploy.sh  test.py  write_files.py
tools/oce/: .gitignore  oce.bat  pyproject.toml
tools/oce/src/oce/: __init__.py  __main__.py  main.py
tools/oce/src/oce/core/: diff_analyzer.py  loop_engine.py  monitor_store.py  opencode_db_reader.py  process_monitor.py  proposal_engine.py  runner.py  state_manager.py  supervisor.py  worktree_manager.py
tools/oce/src/oce/gui/: main.py
tools/oce/src/oce/gui/core/: config.py  data_store.py  db_adapter.py  localdev_manager.py  logger.py  window_manager.py  workers.py
tools/oce/src/oce/gui/ui_pyqt/: api_history_interface.py  app.py  (+3 more)
tools/oce/state/: config.yaml
tools/oce/tests/: conftest.py  test_diff_analyzer.py  test_state_manager.py  test_supervisor.py
tools/opencode-tui-enhance/: .gitignore  oce.bat  pyproject.toml
tools/opencode-tui-enhance/build_oce/: oce.spec
tools/opencode-tui-enhance/build_oce/oce/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  xref-oce.html
tools/opencode-tui-enhance/logs/: 20260524.md  20260525.md
tools/opencode-tui-enhance/src/opencode_tui_plus/: __init__.py  __main__.py  main.py
tools/opencode-tui-enhance/src/opencode_tui_plus/core/: diff_analyzer.py  loop_engine.py  proposal_engine.py  runner.py  state_manager.py  supervisor.py  worktree_manager.py
tools/opencode-tui-enhance/src/opencode_tui_plus/gui/: __init__.py  main.py
tools/opencode-tui-enhance/state/: config.yaml
tools/opencode-tui-enhance/tests/: test_diff_analyzer.py  test_state_manager.py  test_supervisor.py
tools/prompt-tool/: .gitignore  prompt-tool.bat  pyproject.toml
tools/prompt-tool/src/prompt_tool/: __main__.py  main.py
tools/prompt-tool/src/prompt_tool/core/: models.py  renderer.py  template_engine.py  template_loader.py
tools/prompt-tool/src/prompt_tool/gui/: main.py
tools/prompt-tool/tests/: conftest.py  test_integration.py  test_models.py  test_renderer.py  test_template_engine.py  test_template_loader.py
(+1605 files in other folders)
