[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oce"
version = "0.2.0"
description = "opencode 桌面管理工具 (PyQt6 GUI)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "PyQt6-Fluent-Widgets>=1.0",
    "matplotlib>=3.7",
    "psutil>=5.9",
    "pydantic>=2.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
oce = "oce.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
