[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-tool"
version = "0.1.0"
description = "提示词模板引擎桌面管理工具"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "PyQt6>=6.5",
    "PyQt6-Fluent-Widgets>=1.0",
    "pydantic>=2.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
prompt-tool = "prompt_tool.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
